# wallet

./: Cargo.toml  README.md
.claude/: settings.local.json
examples/: README.md  basic_usage.rs  hd_wallet.rs
src/: address.rs  encoding.rs  error.rs  hd_wallet.rs  keypair.rs  lib.rs  signature.rs  wallet.rs
src/crypto/: keypair.rs  mod.rs  signature.rs
src/utils/: address.rs  encoding.rs  mod.rs
src/wallet/: hd.rs  mod.rs  standard.rs
tests/: integration.rs
