[package]
name = "polytorus-wallet"
version = "0.1.0"
edition = "2021"
authors = ["PolyTorus Team"]
description = "PolyTorus Wallet - Cryptographic key management and address generation for blockchain applications"
repository = "https://github.com/PolyTorus/polytorus-wallet"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "wallet", "cryptography", "ed25519", "secp256k1"]
categories = ["cryptography", "blockchain"]

[dependencies]
# Cryptographic dependencies
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context"] }
blake3 = "1.5"
sha2 = "0.10"
ripemd = "0.1"

# Serialization and encoding
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = "0.4"
base58 = "0.2"
bech32 = "0.9"

# Key derivation
hkdf = { version = "0.12", optional = true }
pbkdf2 = "0.12"

# Random number generation
rand = "0.8"
rand_core = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Zeroize for secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# Optional features for advanced functionality
tiny-bip39 = { version = "1.0", optional = true }

[features]
default = ["bip39", "serde_support"]
bip39 = ["dep:tiny-bip39", "dep:hkdf"]
serde_support = ["dep:serde", "dep:serde_json"]

[[example]]
name = "hd_wallet"
path = "examples/hd_wallet.rs"

# [[example]]
# name = "basic_wallet"
# path = "examples/basic_wallet.rs"

# [[example]]
# name = "address_formats"
# path = "examples/address_formats.rs"

# [[example]]
# name = "wallet_manager"
# path = "examples/wallet_manager.rs"

# [[example]]
# name = "multi_signature"
# path = "examples/multi_signature.rs"

[dev-dependencies]
tokio-test = "0.4"

