[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
authors = ["PolyTorus Team"]
description = "PolyTorus Wallet - Cryptographic key management and address generation for blockchain applications"
repository = "https://github.com/PolyTorus/polytorus-wallet"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "wallet", "cryptography", "ed25519", "secp256k1"]
categories = ["cryptography", "blockchain"]

[dependencies]
# Cryptographic dependencies
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core", "alloc", "zeroize"] }
secp256k1 = { version = "0.28", default-features = false, features = ["alloc", "rand", "recovery", "global-context"] }
blake3 = { version = "1.5", default-features = false }
sha2 = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }

# Serialization and encoding
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base58 = { version = "0.2", default-features = false }
bech32 = { version = "0.9", default-features = false }

# Key derivation
hkdf = { version = "0.12", default-features = false, optional = true }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# Random number generation
rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom"] }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }

# Error handling
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }

# Zeroize for secure memory handling
zeroize = { version = "1.7", default-features = false, features = ["derive", "alloc"] }

# Optional features for advanced functionality
tiny-bip39 = { version = "1.0", default-features = false, optional = true }

# no_std collections
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }

[features]
default = ["std", "bip39", "serde_support"]
std = ["anyhow/std", "hex/std", "serde?/std", "serde_json?/std"]
bip39 = ["dep:tiny-bip39", "dep:hkdf"]
serde_support = ["dep:serde", "dep:serde_json"]

[[example]]
name = "basic_usage"

# [[example]]
# name = "basic_wallet"
# path = "examples/basic_wallet.rs"

# [[example]]
# name = "address_formats"
# path = "examples/address_formats.rs"

# [[example]]
# name = "wallet_manager"
# path = "examples/wallet_manager.rs"

# [[example]]
# name = "multi_signature"
# path = "examples/multi_signature.rs"

[dev-dependencies]
tokio-test = "0.4"

